# gofeatureflag-python-provider

./: .gitignore  README.md  flake.nix  pyproject.toml
gofeatureflag_python_provider/: metadata.py  options.py  provider.py  request_flag_evaluation.py  response_flag_evaluation.py
tests/: test_gofeatureflag_python_provider.py
