[tool.poetry]
name = "gofeatureflag-python-provider"
version = "0.1.0"
description = "GO Feature Flag provider for OpenFeature"
authors = ["Thomas Poignant"]


[tool.poetry.dependencies]
python = "^3.10"
openfeature-sdk = "^0.2.0"
pydantic = "^1.10.2"
urllib3 = "^1.26.13"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
